--- a/client/index.html
+++ b/client/index.html
@@ -222,8 +222,8 @@
   <section class="container mt-5 mb-5">
     <div class="row">
       <div class="col-md-6 mt-5">
-        <h2 style="font-family: Georgia, Times, 'Times New Roman', serif;">ABOUT US</h2>
-        <p style="font-family: Georgia, Times, 'Times New Roman', serif;">
+        <h2>ABOUT US</h2>
+        <p>
           The mission of the Pharmaceutical Society, Dibrugarh University, is
           to support the professional development of pharmacy students through
           networking, mentorship, and access to resources. The Society
@@ -246,7 +246,6 @@
       </div>
     </div>
   </section>
-
 
   <footer style="background-color: aliceblue" class=" text-lg-start text-muted">
     <!-- Social Media Links -->
