--- a/client/news-events.html
+++ b/client/news-events.html
@@ -146,7 +146,7 @@
                 date: "19/02/2024",
                 description: "Renowned Professor Enlightens Department with Inspirational Speech",
                 content: "We had an enlightened interactive session today, with Abhijit Bora Sir, Professor and HOD, Department of Journalism and Mass Communication, Tezpur University. He shared his valuable insights upon achieving success not just in the field, but in life itself.",
-                image: "https://hebbkx1anhila5yf.public.blob.vercel-storage.com/image-gb83rC7YXU0eRuAfFPZsNZiTAaqU6D.png"
+                image: "https://lh5.googleusercontent.com/GHO9TltqOaSCZjw4GWaxqkK7sFKe9mUCYUqM6Ybt9P58FURHEW3Spz0rZ9O-B6PzTJfBZ573kU3mdrTnYKZDyfQ=w16383"
             },
             {
                 id: 2,
@@ -154,7 +154,7 @@
                 date: "08/09/2023",
                 description: "Another Important Seminar",
                 content: "Details about the seminar held on 08/09/2023...",
-                image: "/placeholder.svg?height=400&width=800"
+                image: "https://lh5.googleusercontent.com/SkkFd0ZxOUXqifxC6sRLgId1jtXb8J8_wBpCGpvBlXcfrIBXILhwQ5q2X6wBs7QE6JH7e7w952_2OU-jiCRU030=w16383"
             },
             {
                 id: 3,
@@ -162,7 +162,7 @@
                 date: "08/09/2023",
                 description: "Special Event",
                 content: "Information about the special event that took place...",
-                image: "/placeholder.svg?height=400&width=800"
+                image: "https://lh5.googleusercontent.com/biQI4mtcTxEr4sdENXBX2FQ9vRqbiw676aZiwiNKsHqKjINxVbKzyTNAtEeS_o_soLGo3lhIGfRP0xxfnhm0euA=w16383"
             }
         ];
 
