--- a/client/student-form.html
+++ b/client/student-form.html
@@ -144,7 +144,7 @@
                 <h1 class="text-2xl font-bold mb-6 text-center text-gray-800 border-b-2 border-blue-500 pb-2">
                     Pharmaceutical Society Student Registration Form
                 </h1>
-                <p class="mb-8 text-center text-gray-600">Please fill out the form with your information.</p>
+                <!-- <p class="mb-8 text-center text-gray-600">Please fill out the form with your information.</p> -->
                 <section class="mb-8">
                     <h2 class="text-2xl font-semibold mb-4 text-blue-600">Personal Information</h2>
                     <div class="mb-6">
