--- a/client/alumni-form.html
+++ b/client/alumni-form.html
@@ -132,7 +132,7 @@
   <div class="container mx-auto max-w-3xl bg-white shadow-lg rounded-lg overflow-hidden p-6 mt-6 mb-6 fade-in">
     <h1 class="text-2xl font-bold mb-6 text-center text-indigo-600 border-b-2 border-indigo-600 pb-2">Pharmaceutical
       Society Alumni Registration Form</h1>
-    <p class="text-gray-600 mb-8 text-center font-bold ">Please fill out the form with your correct information.</p>
+    <!-- <p class="text-gray-600 mb-8 text-center font-bold ">Please fill out the form with your correct information.</p> -->
 
     <form id="registrationForm" class="space-y-8" enctype="multipart/form-data">
       <section>
@@ -228,7 +228,7 @@
               class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500">
           </div>
           <div>
-            <label for="twitter" class="block text-sm font-medium text-gray-700 mb-1 font-bold">Twitter Profile</label>
+            <label for="twitter" class="block text-sm font-medium text-gray-700 mb-1 font-bold">X Profile (Twitter)</label>
             <input type="url" id="twitter" name="twitter"
               class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500">
           </div>
