--- a/admin/dashboard copy.html
+++ b/admin/dashboard copy.html
@@ -188,13 +188,13 @@
 
     fetchStudentData();
 
-    const posts = [
+    let posts = [
       { id: 1, title: "First Blog Post", author: "John Doe", dateCreated: "2023-05-01" },
       { id: 2, title: "Upcoming Events", author: "Jane Smith", dateCreated: "2023-05-05" },
       { id: 3, title: "New Product Announcement", author: "Bob Johnson", dateCreated: "2023-05-10" },
     ];
 
-    const queries = [
+    let queries = [
       { id: 1, title: "Admission Query", author: "Prospective Student", dateCreated: "2023-05-15" },
       { id: 2, title: "Course Information", author: "Current Student", dateCreated: "2023-05-18" },
       { id: 3, title: "Alumni Event", author: "Alumni Member", dateCreated: "2023-05-20" },
@@ -449,7 +449,12 @@
           break;
         case "Alumni":
           content = `
-            <h1 class="text-3xl font-bold mb-6">Alumni Management</h1>
+            <h1 class=" absolute text-3xl font-bold mb-6">Alumni Management</h1>
+            <div class="mb-4 flex justify-end">
+                <button id="addQueryBtn" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition-colors">
+                    Validate all alumni
+                </button>
+            </div>
             ${renderTable(alumni, [
             { key: "full_name", label: "Full Name" },
             { key: "dob", label: "D.O.B" },
@@ -469,7 +474,12 @@
           break;
         case "Students":
           content = `
-            <h1 class="text-3xl font-bold mb-6">Student Management</h1>
+            <h1 class="absolute text-3xl font-bold mb-6">Student Management</h1>
+            <div class="mb-4 flex justify-end">
+                <button id="addQueryBtn" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition-colors">
+                    Validate all students
+                </button>
+            </div>
             ${renderTable(students, [
             { key: "full_name", label: "Full Name" },
             { key: "email", label: "Email" },
@@ -480,20 +490,25 @@
           ], deleteStudent)}
           `;
           break;
-        <!-- Modify the Posts section in the renderContent function -->
+
         case "Posts":
           content = `
-        <div class="container mx-auto p-6">
-            <h1 class="text-3xl font-bold mb-6">Posts Management</h1>
+        <div class="container mx-auto">
+            <h1 class="absolute text-3xl font-bold mb-6">Posts Management</h1>
+            <div class="mb-4 flex justify-end">
+                <button id="addPostBtn" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition-colors">
+                    Validate all posts 
+                </button>
+            </div>
             <div class="bg-white shadow-md rounded-lg">
-                <table class="w-full">
+                <table class="min-w-full">
                     <thead>
                         <tr class="bg-gray-200">
-                            <th class="p-3 text-left">ID</th>
-                            <th class="p-3 text-left">Title</th>
-                            <th class="p-3 text-left">Author</th>
-                            <th class="p-3 text-left">Date Created</th>
-                            <th class="p-3 text-left">Actions</th>
+                            <th class="px-6 py-3 text-left text-sm font-semibold">ID</th>
+                            <th class="px-6 py-3 text-left text-sm font-semibold">Title</th>
+                            <th class="px-6 py-3 text-left text-sm font-semibold">Author</th>
+                            <th class="px-6 py-3 text-left text-sm font-semibold">Date Created</th>
+                            <th class="px-6 py-3 text-left text-sm font-semibold">Actions</th>
                         </tr>
                     </thead>
                     <tbody id="postsTableBody">
@@ -501,28 +516,29 @@
                     </tbody>
                 </table>
             </div>
-            <div class="mt-4">
-                <button id="addPostBtn" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
-                    Add New Post
-                </button>
-            </div>
         </div>
     `;
+          setTimeout(() => fetchPostsAndQueries(), 0);
           break;
 
         case "Queries":
           content = `
-        <div class="container mx-auto p-6">
-            <h1 class="text-3xl font-bold mb-6">Queries Management</h1>
+        <div class="container mx-auto">
+            <h1 class="absolute text-3xl font-bold mb-6">Queries Management</h1>
+            <div class="mb-4 flex justify-end">
+                <button id="addQueryBtn" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition-colors">
+                    Validate all queries
+                </button>
+            </div>
             <div class="bg-white shadow-md rounded-lg">
-                <table class="w-full">
+                <table class="min-w-full">
                     <thead>
                         <tr class="bg-gray-200">
-                            <th class="p-3 text-left">ID</th>
-                            <th class="p-3 text-left">Title</th>
-                            <th class="p-3 text-left">Author</th>
-                            <th class="p-3 text-left">Date Created</th>
-                            <th class="p-3 text-left">Actions</th>
+                            <th class="px-6 py-3 text-left text-sm font-semibold">ID</th>
+                            <th class="px-6 py-3 text-left text-sm font-semibold">Title</th>
+                            <th class="px-6 py-3 text-left text-sm font-semibold">Author</th>
+                            <th class="px-6 py-3 text-left text-sm font-semibold">Date Created</th>
+                            <th class="px-6 py-3 text-left text-sm font-semibold">Actions</th>
                         </tr>
                     </thead>
                     <tbody id="queriesTableBody">
@@ -530,14 +546,12 @@
                     </tbody>
                 </table>
             </div>
-            <div class="mt-4">
-                <button id="addQueryBtn" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
-                    Add New Query
-                </button>
-            </div>
+            
         </div>
     `;
+          setTimeout(() => fetchPostsAndQueries(), 0);
           break;
+
         case "Notifications":
           content = renderNotifications();
           break;
@@ -597,6 +611,112 @@
       fetchNotifications();
     });
 
+
+    // Exp starts
+
+    function fetchPostsAndQueries() {
+      console.log("Fetching posts and queries...");
+      fetch("fetch_posts_and_queries.php")
+        .then((response) => response.json())
+        .then((data) => {
+          console.log("Received data:", data);
+          if (data.status === "success") {
+            const postsData = data.data.filter((item) => item.type === "post");
+            const queriesData = data.data.filter((item) => item.type === "query");
+            console.log("Posts data:", postsData);
+            console.log("Queries data:", queriesData);
+            renderPosts(postsData);
+            renderQueries(queriesData);
+          } else {
+            console.error("Error fetching posts and queries:", data.message);
+          }
+        })
+        .catch((error) => console.error("Error:", error));
+    }
+
+    function renderPosts(posts) {
+      console.log("Rendering posts:", posts);
+      const postsTableBody = document.getElementById("postsTableBody");
+      if (!postsTableBody) {
+        console.error("Posts table body element not found!");
+        return;
+      }
+      postsTableBody.innerHTML = posts
+        .map(
+          (post) => `
+        <tr>
+          <td class="p-3">${post.id}</td>
+          <td class="p-3">${post.title}</td>
+          <td class="p-3">${post.author}</td>
+          <td class="p-3">${post.timestamp}</td>
+          <td class="p-3">
+            <button class="text-red-500 hover:text-red-700" onclick="deletePostOrQuery(${post.id}, 'post')">
+              <i class="fas fa-trash"></i> Delete
+            </button>
+          </td>
+        </tr>
+      `
+        )
+        .join("");
+    }
+
+    function renderQueries(queries) {
+      console.log("Rendering queries:", queries);
+      const queriesTableBody = document.getElementById("queriesTableBody");
+      if (!queriesTableBody) {
+        console.error("Queries table body element not found!");
+        return;
+      }
+      queriesTableBody.innerHTML = queries
+        .map(
+          (query) => `
+        <tr>
+          <td class="p-3">${query.id}</td>
+          <td class="p-3">${query.title}</td>
+          <td class="p-3">${query.author}</td>
+          <td class="p-3">${query.timestamp}</td>
+          <td class="p-3">
+            <button class="text-red-500 hover:text-red-700" onclick="deletePostOrQuery(${query.id}, 'query')">
+              <i class="fas fa-trash"></i> Delete
+            </button>
+          </td>
+        </tr>
+      `
+        )
+        .join("");
+    }
+
+
+
+    function deletePostOrQuery(id, type) {
+      if (confirm(`Are you sure you want to delete this ${type}?`)) {
+        fetch("fetch_posts_and_queries.php", {
+          method: "POST",
+          headers: { "Content-Type": "application/x-www-form-urlencoded" },
+          body: `id=${id}&type=${type}`,
+        })
+          .then((response) => response.json())
+          .then((data) => {
+            if (data.status === "success") {
+              alert(`${type.charAt(0).toUpperCase() + type.slice(1)} deleted successfully.`);
+              fetchPostsAndQueries();
+            } else {
+              console.error("Error:", data.message);
+            }
+          })
+          .catch((error) => console.error("Error:", error));
+      }
+    }
+
+
+    document.addEventListener("DOMContentLoaded", () => {
+      initNotificationEventListeners();
+      fetchNotifications();
+      fetchPostsAndQueries(); // Call to fetch and render posts and queries
+    });
+
+
+    // Exp ends
     sidebarToggle.addEventListener("click", toggleSidebar);
 
     navButtons.forEach(button => {
